set minimum version of java to 11