@@ -438,74 +438,17 @@
 
     <profiles>
         <profile>
-            <id>jdk8-build</id>
-            <activation>
-                <jdk>1.8</jdk>
-            </activation>
-            <build>
-                <plugins>
-                    <!-- Core Java Plugins; alphabetical order -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <source>${project.java.version}</source>
-                            <target>${project.java.version}</target>
-                            <encoding>${project.build.sourceEncoding}</encoding>
-                            <compilerArgs>
-                                <compilerArg>-Xdiags:verbose</compilerArg>
-                                <compilerArg>-Xlint:all</compilerArg>
-                                <compilerArg>-Xlint:-processing</compilerArg>
-                                <!--<compilerArg>-Werror</compilerArg>-->
-                            </compilerArgs>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>between-jdk9-and-jdk10-build</id>
-            <activation>
-                <jdk>[9,11)</jdk>
-            </activation>
-            <build>
-                <plugins>
-                    <!-- Core Java Plugins; alphabetical order -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <source>${project.java.version}</source>
-                            <target>${project.java.version}</target>
-                            <encoding>${project.build.sourceEncoding}</encoding>
-                            <compilerArgs>
-                                <compilerArg>-Xdiags:verbose</compilerArg>
-                                <compilerArg>-Xlint:all</compilerArg>
-                                <compilerArg>-Xlint:-processing</compilerArg>
-                                <!--<compilerArg>-Werror</compilerArg>-->
-                            </compilerArgs>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>--add-modules java.xml.bind,java.activation
-                                --add-opens java.base/java.lang=ALL-UNNAMED
-                                --add-exports=java.xml.bind/com.sun.xml.internal.bind=ALL-UNNAMED
-                                --add-exports=java.xml.bind/com.sun.xml.internal.bind.v2=ALL-UNNAMED
-                                --add-exports=java.xml.bind/com.sun.xml.internal.bind.v2.runtime.reflect=ALL-UNNAMED
-                            </argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
             <id>jdk11-and-above-build</id>
             <activation>
                 <jdk>[11,)</jdk>
             </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.glassfish.jaxb</groupId>
+                    <artifactId>jaxb-runtime</artifactId>
+                </dependency>
+            </dependencies>
+
             <build>
                 <plugins>
                     <!-- Core Java Plugins; alphabetical order -->
